// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WritePostModal component renders correctly when it is invisible 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={undefined}
  transparent={false}
  visible={false}
>
  <WritePostScreen />
</Modal>
`;

exports[`WritePostModal component renders correctly when it is visible 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={undefined}
  transparent={false}
  visible={true}
>
  <WritePostScreen />
</Modal>
`;
